--- a/README.ru.org
+++ b/README.ru.org
@@ -1,85 +1,155 @@
-* Taoline: Легчайшая Строка — функциональный минимализм для Emacs
+* Shaoline: Путь Строки
 
-В истинном равновесии не нужно ничего лишнего — и taoline отражает лишь то, что действительно занимает твоё внимание сейчас. Эта модельная строка выскакивает в echo area тогда, когда ей есть что сообщить, — но исчезает, не оставив следа, как тихий поток.
+_"Дао, которое можно назвать, не есть постоянное Дао.  
+Мод, который можно увидеть — пора переделать."_
 
-** Что делает taoline?
+Когда ты открываешь Emacs и видишь строку от Shaoline —  
+знай: ты смотрел слишком пристально.  
+Истинный Shaoline не оставляет следа.  
+Строка появляется только тогда, когда сам Вечный Пустой Буфер вздыхает:  
+надо ли что-то сказать?
 
-- Показывает только необходимое — в моменте и внизу окна (echo area).
-- Архитектура строится на чистых функциях: каждый сегмент работает с буфером, не трогая глобальное состояние.
-- За основу взята простота: сегменты легко добавлять, менять местами, убирать.
-- Настройка интуитивна — ясна любому, даже тому, кто впервые увидел Emacs.
-- Отсутствие таймеров: обновление происходит мягко — только при действиях пользователя.
+---
 
-** Первый шаг
+** За что любить Shaoline
 
-Установить taoline можно так:
+- *Минимализм*: Shaoline появляется только, когда есть что сказать. 
+- *Сегменты – просты*: Каждый сегмент — незрим, чист, не мешает другим, не цепляется за мирское.
+- *Настройка без усилия*: Всё понятно, всё открыто.  
+- *Время течёт*: Только естественные обновления — словно дождь стучит в окно, так Shaoline обновляется реакцией на события.
+- *Прозрачность и радость*: В Shaoline нет того, что нельзя постичь и изменить, если дух твой легок.
+- *Простота и прозрачность*: настройки Shaoline яснее, чем чай на рассвете Долины Вэй.
+
+---
+
+** Как постичь Путь Shaoline
+
+Начинай, как делали древние:
 
 #+BEGIN_SRC emacs-lisp
-(use-package taoline
+(use-package shaoline
   :ensure t
   :config
-  (taoline-mode 1))
+  (shaoline-mode 1))
 #+END_SRC
 
-Чтобы включить taoline:
+Без use-package? Впусти истину напрямую:
 
 #+BEGIN_SRC emacs-lisp
-(taoline-mode 1)
+(shaoline-mode 1)
 #+END_SRC
 
-** Индивидуальная настройка: танец сегментов
+Никакой child-frame, никакой window-modeline — Shaoline танцует только в echo area, недосягаем для суеты остального интерфейса.
 
-Все сегменты собираются в списке `taoline-segments`. Каждый записан как чистая функция (buffer → string):
+---
+
+** Учение о Сегментах
+
+_"Великий мастер не делит строку —  
+каждый фрагмент отдельный.  
+Но вместе они - путь Shaoline."_
+
+Shaoline-сегменты — это монахи.  Каждый тесно связан с Пустотой,  но не пристаёт к соседу:
 
 #+BEGIN_SRC emacs-lisp
-(setq taoline-segments
-      '((:left taoline-segment-icon-and-buffer taoline-segment-git-branch)
-        (:center taoline-segment-echo-message)
-        (:right taoline-segment-project-name taoline-segment-time)))
+(setq shaoline-segments
+      '((:left shaoline-segment-icon-and-buffer shaoline-segment-git-branch)
+        (:center shaoline-segment-echo-message)
+        (:right shaoline-segment-project-name shaoline-segment-time)))
 #+END_SRC
 
-Менять порядок, добавлять и убирать сегменты — просто редактируй этот список. Левый (:left), центральный (:center), правый (:right) блоки — между ними пространство возникнет, если нужно.
+Расположи их, как камни в саду: убирай, переставляй, добавляй — без усилия и страхов.
 
-** Медитирующий над расширением: как создать свой сегмент
+---
 
-Каждая часть taoline — отдельная функция, не касающаяся ни других, ни глобального мира. Создать новый сегмент — дело одной запятой:
+** Как создать свой сегмент и не переродиться Жуком
+
+_"Великий путь прост: пусть твоя функция возвращает строку."_
+
+Просто и тихо заведи новый сегмент:
 
 #+BEGIN_SRC emacs-lisp
-(taoline-define-segment taoline-segment-buffer-size (buffer)
+(shaoline-define-segment shaoline-segment-buffer-size (buffer)
   "Показывает размер буфера."
   (format "%.1fK" (/ (buffer-size buffer) 1024.0)))
 #+END_SRC
 
-Затем добавь его в нужный раздел:
+Присоединись к общине:
 
 #+BEGIN_SRC emacs-lisp
-(push 'taoline-segment-buffer-size (alist-get :right taoline-segments))
+(push 'shaoline-segment-buffer-size (alist-get :right shaoline-segments))
 #+END_SRC
 
-** Пусть echo area течёт спокойно
-
-Taoline показывает себя в echo area только тогда, когда там нет других сообщений. Всё, что важнее — например, minibuffer, isearch или ваши сообщения — имеет приоритет. Стандартная modeline скрывается (если хочется — это поведение опционально).
-
-** Частые вопросы
-
-- *Где моя mode-line?*  
-  Исчезла в знак уважения к Пустоте. Она вернётся, когда отключишь `taoline-mode`.
-
-- *Почему иногда сообщение taoline исчезает?*  
-  Когда Emacs чем-то занят — выводит свои уведомления или работает minibuffer — taoline уступает дорогу.
-
-- *Как добавить что-то своё?*  
-  Просто напиши функцию (buffer) → string, зарегистрируй через `taoline-define-segment`, и помести симовол этой функции в нужном месте списка сегментов.
-
-** Где учиться искусству taoline?
-
-Загляни в исходный код или на [GitHub](https://github.com/11111000000/taoline) — там всё ясно и предельно лаконично. Логи работы (если нужно) в буфере `*taoline-logs*`.
-
-** Пример работы
-
-#+ATTR_ORG: :width 80%
-[[file:screenshot-taoline.png]]
+"Лучшее конфигурирование — когда ты не подозреваешь, что конфигурируешь."
 
 ---
 
-Пустое пространство в строке — место для тишины.
+** Свобода Echo Area
+
+_"Когда чашка полна —  
+мастер попивает чай
+и не мешает."_  
+
+Особая мудрость: Shaoline появляется только если echo area пуста. Любое emacs-сообщение важнее — Shaoline смиренно уступает место.  
+
+---
+
+** Коаны
+
+_"Вопрос — твой учитель."_
+
+- *Где моя mode-line?*  
+  Там, где нет Shaoline, — в нирване. Захоти — вернётся.
+
+- *Shaoline исчезает! Это просветление?*  
+  Если echo-area занята: Shaoline замолкает.  
+  Он ждёт, когда пустота вернётся, и лишь тогда проявит себя.
+
+- Хочу свой сегмент: что делать?*  
+  Функция (buffer) → string, зарегистрирована через shaoline-define-segment — и ты уже мастер.
+
+---
+
+** Невидимые свитки ШаоЛиня  
+
+Включи `shaoline-debug` и весь путь строк и ошибок окажется в буфере `*shaoline-logs*`.  
+Там путешественник найдёт ответы на свои вопросы и следы страданий несовершенных сегментов.
+
+** Тайные знания
+
+- `shaoline-segments` – Опиши структуру строки: левый край, центр, правый край.  
+- `shaoline-autohide-modeline` – Истина, mode-line уйдёт прочь.  
+- `shaoline-update-hooks` – Хуки для реактивного обновления.
+- `shaoline-timer-interval` – Интервал для мудрого обновления времени и батареи.
+- `shaoline-message-timeout` – Сколько секунд пользовательское сообщение будет жить, прежде чем Shaoline его перекроет.
+
+---
+
+** Segments по умолчанию
+- shaoline-segment-icon-and-buffer — иконка и имя буфера:  
+  _Даже пустой файл может быть иконой Дао._
+- shaoline-segment-git-branch — ветка git.
+- shaoline-segment-project-name — имя проекта, если есть.
+- shaoline-segment-battery — статус батареи (ибо и у ноутбука бренность).
+- shaoline-segment-time — текущее время (о временах — см. трактат Чжуан-цзы).
+- shaoline-segment-echo-message — echo message пользователя, если он есть.
+
+
+
+[GitHub: https://github.com/11111000000/shaoline]
+
+---
+
+** Картина
+
+#+ATTR_ORG: :width 80%
+[[file:screenshot-shaoline.png]]
+
+---
+
+"Делай своё — и знай меру,  
+Shaoline появится, когда надо,  
+А если скрылся — значит, таков Путь."  
+
+Нести строку, не неся строку — вот совершенство!
+
