--- a/README.org
+++ b/README.org
@@ -54,6 +54,7 @@ No child-frame, nor window-modeline—the Shaoline line dances solely within the
 - /Time doth Flow/: Only as the rain upon the lattice does Shaoline update—stirred by event, never haste.
 - /Transparency and Cheer/: In Shaoline containeth nothing that may not be grasped or altered, provided thy spirit be light.
 - /Simplicity and Candour/: The settings are clear as morning tea sipped in the Valley of Wei.
+- /Beautiful icons/: For vivid file/mode/project icons, install [[https://github.com/domtronn/all-the-icons.el][all-the-icons]] (see FAQ).
 
 * Teachings on Segments
 
@@ -84,7 +85,9 @@ Arrange them as stones in a garden: remove, replace, or add—freely, unafraid.
 
 * Configuration Examples
 
-/Minimalist only-bufname + git branch:/
+To see and change all customization options in an interactive interface:
+#+BEGIN_SRC emacs-lisp
+M-x customize-group RET shaoline RET
 
 #+BEGIN_SRC emacs-lisp
 (setq shaoline-segments
